Fixed overflow on Iphone

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,6 +14,7 @@ body {
   font-family: "Bungee", cursive;
   font-size: small;
   min-height: 100vh;
+  width: 100%;
   position: relative;
 }
 
